; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/scsi/extr_fd_mcs.c_fd_mcs_select.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/scsi/extr_fd_mcs.c_fd_mcs_select.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.Scsi_Host = type { i32 }

@SCSI_Cntl_port = common dso_local global i32 0, align 4
@adapter_mask = common dso_local global i32 0, align 4
@SCSI_Data_NoACK_port = common dso_local global i32 0, align 4
@PARITY_MASK = common dso_local global i32 0, align 4
@TMC_Cntl_port = common dso_local global i32 0, align 4
@SCSI_Status_port = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.Scsi_Host*, i32)* @fd_mcs_select to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @fd_mcs_select(%struct.Scsi_Host* %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.Scsi_Host*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i64, align 8
  store %struct.Scsi_Host* %0, %struct.Scsi_Host** %4, align 8
  store i32 %1, i32* %5, align 4
  %8 = load i32, i32* @SCSI_Cntl_port, align 4
  %9 = call i32 @outb(i32 130, i32 %8)
  %10 = load i32, i32* @adapter_mask, align 4
  %11 = load i32, i32* %5, align 4
  %12 = shl i32 1, %11
  %13 = or i32 %10, %12
  %14 = load i32, i32* @SCSI_Data_NoACK_port, align 4
  %15 = call i32 @outb(i32 %13, i32 %14)
  %16 = load i32, i32* @PARITY_MASK, align 4
  %17 = load i32, i32* @TMC_Cntl_port, align 4
  %18 = call i32 @outb(i32 %16, i32 %17)
  store i64 350, i64* %7, align 8
  br label %19

19:                                               ; preds = %30, %2
  %20 = load i32, i32* @SCSI_Status_port, align 4
  %21 = call i32 @inb(i32 %20)
  store i32 %21, i32* %6, align 4
  %22 = load i32, i32* %6, align 4
  %23 = and i32 %22, 1
  %24 = icmp ne i32 %23, 0
  br i1 %24, label %25, label %28

25:                                               ; preds = %19
  %26 = load i32, i32* @SCSI_Cntl_port, align 4
  %27 = call i32 @outb(i32 128, i32 %26)
  store i32 0, i32* %3, align 4
  br label %37

28:                                               ; preds = %19
  %29 = call i32 @udelay(i32 1000)
  br label %30

30:                                               ; preds = %28
  %31 = load i64, i64* %7, align 8
  %32 = add i64 %31, -1
  store i64 %32, i64* %7, align 8
  %33 = icmp ne i64 %32, 0
  br i1 %33, label %19, label %34

34:                                               ; preds = %30
  %35 = load %struct.Scsi_Host*, %struct.Scsi_Host** %4, align 8
  %36 = call i32 @fd_mcs_make_bus_idle(%struct.Scsi_Host* %35)
  store i32 1, i32* %3, align 4
  br label %37

37:                                               ; preds = %34, %25
  %38 = load i32, i32* %3, align 4
  ret i32 %38
}

declare dso_local i32 @outb(i32, i32) #1

declare dso_local i32 @inb(i32) #1

declare dso_local i32 @udelay(i32) #1

declare dso_local i32 @fd_mcs_make_bus_idle(%struct.Scsi_Host*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
